# reactive-led-curtain

./: .gitignore  Cargo.toml  README.md  check.sh  config.toml  easing.toml  flake.nix  index.html
.github/workflows/: rust.yml
app/: Cargo.toml
app/src/: app.rs  audio.rs  cmap.rs  easing.rs  light.rs  main.rs  serialport_thread.rs  spectrogram.rs  util.rs
app/src/spectrogram/: cmap.rs  graph.rs  hps_energy.rs  power.rs
arduino-agent/: arduino-agent.ino
lib/: Cargo.toml
lib/benches/: analysis.rs
lib/src/: cfg.rs  color.rs  easing.rs  fft.rs  lib.rs  state.rs  unit.rs  util.rs
lib/src/state/: fft.rs  hps.rs  light.rs  loudness.rs  paint.rs  power.rs
plot/: plot.py
src/: app.rs  fft.rs  lib.rs  main.rs
src/app/: audio.rs  audio_in.rs
uart-controller/: Cargo.toml
uart-controller/src/: main.rs
