[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
garde.workspace = true
median.workspace = true
toml.workspace = true
fields-iter.workspace = true

derive_more = { version = "1.0.0", features = ["deref", "deref_mut"] }
rustfft = "6.2.0"
ecolor = "0.29"
tiny-skia = { version = "0.11.4", default-features = false, features = [
    "simd",
    "std",
] }
emath = { version = "0.31.1", features = ["serde"] }
ebur128 = "0.1.10"

puffin_egui = { workspace = true, optional = true }
paste = "1.0.15"

[features]
profiling = ["puffin_egui"]

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
rand = "0.9"

[[bench]]
name = "analysis"
harness = false
